apps/front/src/app/shared/header/header.component.scss
.navbar {
  background-color: white !important;
  box-shadow: black;
  z-index: 1050;
}

.recaptcha-text > a {
  color: gray !important;
}

.navbar-nav > li {
  padding-left:10px;
  padding-right:10px;
}

.nav-link {
  text-decoration-color: #8438ff !important;
}

.nav-link:hover {
  text-decoration: underline;
}

a:hover {
  cursor: pointer;
}

.navbar-brand {
  width: 9vw;
}

@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
  .create-button {
    margin-bottom: 1rem;
    width: 20%;
    height: 60px;
  }

  .navbar-nav > li{
    padding-top:5px;
    padding-bottom: 5px;
  }

  .navbar-brand {
    width: 30vw;
  }
}

@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
  .create-button {
    margin-bottom: 1rem;
    width: 20%;
    height: 60px;
  }

  .navbar-toggler {
    margin-right: 1rem;
  }

  .navbar-nav > li{
    padding-top:5px;
    padding-bottom: 5px;
  }

  .navbar-brand {
    width: 25vw;
  }
}

